Update research date

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <img src="assets/img/openfoam.png" alt="">
               <h4 class="text-center mb-2">Ultrasonic Medical Instrument</h4>
               <span>PI: Prof. Anita Penkova</span>
-              <span>Spring 2020 – Present</span>
+              <span>Spring 2020 – Summer 2020</span>
               <p>
                 Ultrasonic streaming is associated with propagation of sound in a particular fluid medium resulting from time-averaged nonlinear dynamics. It has begun to enter the biological field through sonochemistry and sonophoresis, where the ultrasound was used to stimulate or increase the absorption of drugs. 
               </p>
